--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -15,6 +15,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+  font-size: var(--font-size);
 }
 
 body {
@@ -23,6 +24,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 * {
