feat: added footer

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -47,7 +47,7 @@
   }
 
   &__contact {
-    padding: 0 20px;
+    width: 140px;
     border-left: var(--glass-border);
     height: 100%;
     display: flex;
