--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -7,7 +7,7 @@
   display: flex;
 
   &__title {
-    width: 150px;
+    min-width: 150px;
     height: 100%;
     border-right: var(--glass-border);
     display: flex;
