--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -7,18 +7,18 @@
   display: flex;
 
   &__title {
-    width: 250px;
+    width: 150px;
     height: 100%;
     border-right: var(--glass-border);
     display: flex;
     align-items: center;
     padding-left: 20px;
     cursor: pointer;
+    font-size: 1.25rem;
   }
 
   &__nav_bar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
     width: 100%;
   }
@@ -46,5 +46,6 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    height: 100%;
   }
 }
