--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -4,6 +4,7 @@
   --font-size: 0.95rem;
   --glass-background: rgba(255, 255, 255, 0.05);
   --glass-border: 1px solid rgba(255, 255, 255, 0.2);
+  --left-margin: 200px;
 }
 
 @media (prefers-color-scheme: dark) {
