--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -12,7 +12,7 @@
     border-right: var(--glass-border);
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    justify-content: center;
     cursor: pointer;
     font-size: 1.25rem;
   }
