--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -25,18 +25,19 @@
   }
 
   &__greetings {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
+    padding-left: 5px;
   }
 
   &__name {
-    font-size: 3.25rem;
+    font-size: 4.3rem;
     color: white;
   }
 
   &__front {
     display: flex;
     align-items: center;
-    font-size: 1.7rem;
+    font-size: 2.1rem;
     color: #615fff;
   }
 
@@ -45,7 +46,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
 
   &__find_profile {
@@ -56,7 +57,7 @@
   }
 
   &__game {
-    width: 470px;
+    width: 460px;
     height: 420px;
     background: linear-gradient(
       140deg,
@@ -120,6 +121,7 @@
       align-items: center;
       justify-content: center;
       font-size: 13px;
+
       &_1 {
         background: radial-gradient(ellipse at top, #196c6a 0%, #114b4a 10 0%);
         box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.8),
