--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -16,12 +16,12 @@ body {
   margin: 0;
   padding: 0;
   font-size: var(--font-size);
+  font-family: var(--font-fira-code), monospace;
 }
 
 body {
   background: var(--background);
   color: var(--text);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
