feat: added zustand to project

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -74,6 +74,10 @@
     position: relative;
     z-index: 1;
 
+    @media (max-width: 1200px) {
+      display: none;
+    }
+
     &_glow_1 {
       position: absolute;
       width: 200px;
