--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -17,6 +17,10 @@
     cursor: pointer;
   }
 
+  &__mobile_menu {
+    display: none;
+  }
+
   &__nav_bar {
     display: flex;
     justify-content: space-between;
@@ -47,5 +51,28 @@
     justify-content: center;
     cursor: pointer;
     height: 100%;
+  }
+
+  @media (max-width: 750px) {
+    &__title {
+      flex: 0 0 100%;
+      border: none;
+      justify-content: start;
+      padding-left: 24px;
+      font-size: 1.8rem;
+    }
+
+    &__mobile_menu {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding-right: 20px;
+      font-size: 2rem;
+    }
+
+    &__nav_bar {
+      display: none;
+    }
   }
 }
