--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -14,8 +14,15 @@
   }
 
   &__pages {
-    width: 65px;
+    flex-basis: 65px;
+    flex-shrink: 0;
     height: 100%;
     border-right: var(--glass-border);
+  }
+
+  &__accordion {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
   }
 }
