feat: added dropdowns to contact page

--- a/src/components/dropitem/dropitem.module.scss
+++ b/src/components/dropitem/dropitem.module.scss
@@ -19,3 +19,12 @@
     overflow-wrap: anywhere;
   }
 }
+
+.hoverable {
+  transition: 0.3s;
+}
+
+.hoverable:hover {
+  color: white;
+  transition: 0.3s;
+}
