--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -7,7 +7,7 @@
   }
 
   &__menu {
-    width: var(--left-margin);
+    min-width: var(--left-margin);
     height: 100%;
     border-right: var(--glass-border);
     display: flex;
@@ -24,6 +24,19 @@
     font-size: 2rem;
     padding-top: 10px;
     gap: 30px;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+
+    &_top {
+      width: 100%;
+      height: 40px;
+      border-bottom: var(--glass-border);
+    }
   }
 
   &__page {
