--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -7,9 +7,22 @@
   }
 
   &__menu {
-    width: var(--left-margin);
+    min-width: var(--left-margin);
     height: 100%;
     border-right: var(--glass-border);
     display: flex;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+
+    &_top {
+      width: 100%;
+      height: 40px;
+      border-bottom: var(--glass-border);
+    }
   }
 }
