--- a/src/app/contacts/page.module.scss
+++ b/src/app/contacts/page.module.scss
@@ -34,7 +34,7 @@
   }
 
   &__contact_form {
-    width: 532px;
+    min-width: 532px;
     height: 100%;
     border-right: var(--glass-border);
     display: flex;
@@ -106,6 +106,7 @@
   }
 
   &__code_snippet {
+    min-width: 100%;
     height: 100%;
     padding: 12px 40px;
   }
