--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -45,6 +45,10 @@ main {
   height: 100%;
 }
 
+input {
+  all: unset;
+}
+
 // @media (prefers-color-scheme: dark) {
 //   html {
 //     color-scheme: dark;
