--- a/src/components/dropdown/dropdown.module.scss
+++ b/src/components/dropdown/dropdown.module.scss
@@ -25,7 +25,7 @@
     &_container {
       max-height: 100%;
       overflow: hidden;
-      transition: 0.5s;
+      transition: opacity 0.3s, max-height 0.2s;
     }
   }
 
