--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -46,7 +46,7 @@ main {
 }
 
 input {
-  all: unset;
+  font-family: var(--font-fira-code), monospace;
 }
 
 // @media (prefers-color-scheme: dark) {
