--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -23,6 +23,32 @@
       width: 100%;
       height: 40px;
       border-bottom: var(--glass-border);
+
+      &_tab {
+        width: 242px;
+        height: 100%;
+        border-right: var(--glass-border);
+        display: flex;
+
+        &_filter {
+          height: 100%;
+          width: 85%;
+          padding: 12px 24px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        &_close {
+          width: 10%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 25px;
+          cursor: pointer;
+        }
+      }
     }
 
     &_block {
