feat: added some styles

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 60px;
+  min-height: 50px;
   border-bottom: var(--glass-border);
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
