--- a/src/components/project_card/project_card.module.scss
+++ b/src/components/project_card/project_card.module.scss
@@ -49,6 +49,7 @@
         background-color: rgba(69, 85, 108, 1);
         border: none;
         border-radius: 10px;
+        cursor: pointer;
       }
     }
   }
