--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -17,11 +17,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    flex: 1;
 
     &_top {
       width: 100%;
-      height: 40px;
+      max-height: 40px;
       border-bottom: var(--glass-border);
 
       &_tab {
@@ -52,7 +53,28 @@
     }
 
     &_block {
-      padding: 30px 30px;
+      width: 100%;
+      height: 530px;
+      max-height: 100%;
+      margin: 20px 0px;
+      padding: 10px 30px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 90px;
+      overflow-y: auto;
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: rgba(98, 116, 142, 1);
+        border-radius: 60px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
     }
   }
 }
