--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 60px;
+  min-height: 50px;
   border-top: var(--glass-border);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -9,7 +9,7 @@
 
   &__title {
     min-width: var(--left-margin);
-    height: 100%;
+    min-height: 100%;
     border-right: var(--glass-border);
     display: flex;
     align-items: center;
