--- a/src/components/main/main.module.scss
+++ b/src/components/main/main.module.scss
@@ -3,6 +3,7 @@
   width: 1450px;
   min-height: 100px;
   height: 720px;
+  max-height: 720px;
   background-color: var(--glass-background);
   border: var(--glass-border);
   border-radius: 15px;
