--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -22,6 +22,7 @@
 
     &_top {
       width: 100%;
+      min-height: 40px;
       max-height: 40px;
       border-bottom: var(--glass-border);
 
@@ -50,6 +51,12 @@
           cursor: pointer;
         }
       }
+    }
+
+    &_container {
+      width: 100%;
+      height: 100%;
+      padding-right: 15px;
     }
 
     &_block {
