--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -4,6 +4,7 @@
     font-size: 1.25rem;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
   }
 
   &__menu {
@@ -61,8 +62,7 @@
 
     &_block {
       width: 100%;
-      height: 530px;
-      max-height: 100%;
+      height: 100%;
       margin: 20px 0px;
       padding: 10px 30px;
       display: flex;
@@ -81,6 +81,49 @@
 
       &::-webkit-scrollbar-track {
         background-color: transparent;
+      }
+    }
+  }
+
+  @media (max-width: 750px) {
+    &__wrapper {
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    &__menu {
+      overflow: hidden;
+      min-height: 160px;
+      max-height: 200px;
+
+      &_collapsed {
+        min-height: 40px;
+      }
+    }
+
+    &__content {
+      min-height: 550px;
+      margin: 10px 0;
+      overflow: hidden;
+      padding-bottom: 20px;
+      &_top {
+        display: none;
+      }
+
+      &_container {
+        padding: 0;
+      }
+
+      &_block {
+        max-height: 420px;
+        padding-bottom: 130px;
+        // height: auto;
+        align-items: center;
+        justify-content: center;
+
+        &_open {
+          max-height: 560px;
+        }
       }
     }
   }
