--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -14,6 +14,10 @@
     display: flex;
   }
 
+  &__mobile_title {
+    display: none;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
@@ -58,12 +62,13 @@
       width: 100%;
       height: 100%;
       padding-right: 15px;
+      padding-top: 15px;
+      padding-bottom: 50px;
     }
 
     &_block {
       width: 100%;
       height: 100%;
-      margin: 20px 0px;
       padding: 10px 30px;
       display: flex;
       flex-wrap: wrap;
@@ -93,19 +98,33 @@
 
     &__menu {
       overflow: hidden;
-      min-height: 160px;
-      max-height: 200px;
+      min-height: 220px;
+      max-height: 220px;
+      flex-direction: column;
+      padding-bottom: 95px;
 
       &_collapsed {
-        min-height: 40px;
+        min-height: 95px;
       }
     }
 
+    &__mobile_title {
+      display: block;
+      border-top: var(--glass-border);
+      width: 100%;
+      padding: 15px 18px;
+    }
+
     &__content {
-      min-height: 550px;
+      min-height: 430px;
       margin: 10px 0;
       overflow: hidden;
-      padding-bottom: 20px;
+      padding-bottom: 40px;
+
+      &_open {
+        min-height: 550px;
+      }
+
       &_top {
         display: none;
       }
@@ -116,8 +135,7 @@
 
       &_block {
         max-height: 420px;
-        padding-bottom: 130px;
-        // height: auto;
+        padding-bottom: 60px;
         align-items: center;
         justify-content: center;
 
